// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MauTextAreaField > matches the snapshot 1`] = `
<div>
  <div
    class="string input optional "
  >
    <label
      for="the_name"
    >
      The Label
    </label>
    <textarea
      id="the_name"
      name="the_name"
      placeholder="e.g. like this"
    />
    <p
      class="inline-hints"
    >
      <span>
        here is a clue
      </span>
    </p>
  </div>
</div>
`;

exports[`MauTextAreaField > matches the snapshot if id is provided 1`] = `
<div>
  <div
    class="string input optional "
  >
    <label
      for="the_name"
    >
      The Label
    </label>
    <textarea
      id="different-than-name"
      name="the_name"
      placeholder="e.g. like this"
    />
    <p
      class="inline-hints"
    >
      <span>
        here is a clue
      </span>
    </p>
  </div>
</div>
`;
